[package]
name = "ic-verify-bls-signature"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for handling BLS signatures"

[dependencies]
bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
pairing = "0.22"
lazy_static = "1"
rand = "0.6"
sha2 = "0.9"
hex = "0.4"
