[package]
name = "ic-verify-bls-signature"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A library for handling BLS signatures"

[dependencies]
bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "experimental"] }
pairing = "0.22"
sha2 = { version = "0.9", default-features = false }
rand = { version = "0.6", default-features = false }

lazy_static = { version = "1", optional = true, default-features = false }
hex = { version = "0.4", optional = true, default-features = false }

[features]
default = ["alloc"]
alloc = ["bls12_381/alloc", "lazy_static", "hex/alloc"]

[dev-dependencies]
hex = "0.4"
